# SkyMarket

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
frontend_react/src/components/editCommentPopup/: EditCommentPopup.js
frontend_react/src/components/preloader/: Preloader.scss
frontend_react/src/components/privateRoute/: PrivateRoute.js
frontend_react/src/utils/: axiosInstance.js  useAxios.js
frontend_react/src/utils/hooks/: useFormValidation.js
skymarket/: manage.py
skymarket/ads/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py
skymarket/redoc/: urls.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: managers.py  models.py  serializers.py
skymarket/users/management/commands/: loadall.py
skymarket/users/migrations/: 0001_initial.py
